# Haftung-AI

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  experiments.yml
configs/: perception.yaml  rag.yaml  safety.yaml  system.yaml
configs/experiments/: s1_no_rag.yaml  s2_rag.yaml  s3_rag_constrained.yaml
data/knowledge_base/case_law/: bgh_auffahrunfall.txt  bgh_fussgaenger.txt  bgh_geschwindigkeit.txt  bgh_ueberholen.txt  bgh_vorfahrt.txt
data/knowledge_base/stvo/: stvo_abbiegen.txt  stvo_abstand.txt  stvo_fussgaenger.txt  stvo_geschwindigkeit.txt  (+3 more)
evaluation/analysis/: compare_systems.py  plot_results.py  results_table.py  statistical_tests.py
evaluation/dataset/: schema.json  text_scenario_schema.json
evaluation/metrics/: aggregate.py  calibration.py  causation_accuracy.py  cause_taxonomy.py  factors_f1.py  hallucination.py  hallucination_entropy.py  nli_hallucination.py  responsibility_mae.py  retrieval_quality.py
evaluation/research/: research_questions.md
evaluation/runners/: run_all_systems.py  run_experiment.py  run_judge_variance.py  run_stability.py  run_weight_ablation.py
scripts/: create_eval_dataset.py  create_text_scenarios.py  generate_synthetic_can.py  ingest_knowledge_base.py
tests/: conftest.py
tests/evaluation/: test_experiment_runner.py  test_metrics.py  test_weight_ablation.py
tests/integration/: test_api_endpoints.py  test_graph_execution.py  test_telemetry_agent.py  test_vision_agent.py
tests/unit/: test_anomaly_detector.py  test_asil.py  test_can_parser.py  test_causation_agent.py  test_cause_taxonomy.py  test_contradiction_agent.py  test_detection.py  test_embeddings.py  test_evidence_agent.py  test_groq_client.py  test_impact_detector.py  test_kalman.py  test_nli_hallucination.py  test_pdf_generator.py  test_plausibility.py  test_prompts.py  test_rag_node.py  test_report_agent.py  test_retrieval_quality.py  test_safety_manager.py  test_scene_graph.py  test_settings.py  test_speed_profile.py  test_state_schema.py  test_structured_output.py  test_text_input_node.py  test_tracker.py  test_ttc.py  test_vectorstore.py
(+87 files in other folders)
