[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haftung-ai"
version = "0.1.0"
description = "LLM-powered multi-agent system for automated accident causation analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Pratik Priyanshu"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.26",

    # LLM
    "groq>=0.11",
    "langgraph>=1.0",
    "langchain-core>=0.3",

    # Perception
    "ultralytics>=8.0",
    "deep-sort-realtime>=1.3",
    "opencv-python>=4.8",

    # RAG
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "torch>=2.0",
    "rank-bm25>=0.2",

    # Document processing
    "pypdf>=4.0",
    "langchain-text-splitters>=0.2",

    # Report generation
    "weasyprint>=62",
    "jinja2>=3.1",
    "matplotlib>=3.8",

    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.7",
    "sse-starlette>=2.0",

    # UI
    "streamlit>=1.32",

    # Telemetry
    "pandas>=2.1",

    # Statistical analysis
    "scipy>=1.11",
]

[project.urls]
Homepage = "https://github.com/pratik25priyanshu20/haftung-ai"
Repository = "https://github.com/pratik25priyanshu20/haftung-ai"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.100",
]

[tool.hatch.build.targets.wheel]
packages = ["src/haftung_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
